--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -230,4 +230,4 @@ jobs:
         with:
           tag_name: v${{ env.builddate }}.${{ github.run_number }}
           files: "${{ env.WORKSPACE }}/${{ env.KERNEL_DEVICE }}-${{ env.KERNEL_NAME }}_${{ env.builddate }}.zip"
-          generate_release_notes: true
+          generate_release_notes: false
